// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverBlendMode snapshots should render PopoverBlendMode 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="initial"
  >
    <div
      class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Pass through
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="normal"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Normal
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="darken"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Darken
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="multiply"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Multiply
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="color-burn"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Color burn
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="lighten"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Lighten
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="screen"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Screen
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="plus-lighter"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Plus lighter
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="color-dodge"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Color dodge
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="overlay"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Overlay
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="soft-light"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Soft Light
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="hard-light"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Hard light
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="difference"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Difference
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="exclusion"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Exclusion
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="hue"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Hue
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="saturation"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Saturation
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="color"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Color
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverBlendMode snapshots should render wiht mixed value 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="initial"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Pass through
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="normal"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Normal
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="darken"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Darken
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="multiply"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Multiply
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="color-burn"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Color burn
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="lighten"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Lighten
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="screen"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Screen
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="plus-lighter"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Plus lighter
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="color-dodge"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Color dodge
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="overlay"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Overlay
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="soft-light"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Soft Light
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="hard-light"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Hard light
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="difference"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Difference
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="exclusion"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Exclusion
    </small>
  </div>
  <div
    class="PopoverSeparator"
  />
  <div
    class="PopoverItem"
    data-test-popover-item="hue"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Hue
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="saturation"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Saturation
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="color"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Color
    </small>
  </div>
</DocumentFragment>
`;
